# secondBest

./: a.cpp  bruh.cpp  myHome.txt  struct_myass.cpp  test.cpp  wplace.cpp
CP_club/: A.cpp  A1.cpp  A2.cpp  A3.cpp  C.cpp  tempCodeRunnerFile.cpp
IOAI shits/: burn_calories_test.csv  burn_calories_train.csv  calories_predict.py  requirements.txt  sample_submission.csv  submission.csv
Java script/: 10_Slide_sample.html  10_Slide_sample.js  11_Slide_sample.html  11_Slide_sample1.js  11_Text_P7-10.js  main.html  main.js
Jojump/jojump/: CMakeLists.txt  README.txt  jojo.cpp  jojump
KU-2 Tuvshinzaya/: test1.cpp  test2.cpp  test3.cpp  test4.cpp
Random_CP/: Aexam1.cpp  AnhniiToonMassive.cpp  Bexam.cpp  Cellular_Network.cpp  Cow-libi.cpp  Custom_Sorting.cpp  Daisy_chains.cpp  Fudu.cpp  Hamgiin.cpp  Niilber1.cpp  PQ_with_longlong.cpp  Palindrome_Reorder.cpp  PrimeNumba.cpp  Running_Miles.cpp  Suudal.cpp  Suudal2.cpp  TheyAreEverywhere_cf.cpp  Togloom.cpp  Togloom2.cpp  breed_minor.cpp  concert.cpp  counting.cpp  customSorting2.cpp  distinct.cpp  itsMooingTime.cpp  main.cpp  max_dist.cpp  mog_field.cpp  paired_up.cpp  second.cpp  subarray_sums2.cpp  table.cpp  tempCodeRunnerFile.cpp  tests.cpp  togloomfinal.cpp  tselmeg.cpp  wdtccte2.cpp
SFML/: test.cpp
School/: Sumss.cpp  apple.cpp  dp.cpp  dup.cpp  essay.cpp  someshit.cpp  sudoku.cpp  table.cpp  tasks copy.json  tempCodeRunnerFile.cpp  teste.cpp  toh.cpp
Some python/: Variables&DataTypes.py  car.py  maain.py  main.py
Some_html/: 06_P11.html  07_P16-17.html  07_P18-19.html  07_P4.html  bababooey.html  main.html  (+2 more)
(+164 files in other folders)
